--- a/src/sections/education/FormationTimeLine.module.css
+++ b/src/sections/education/FormationTimeLine.module.css
@@ -134,3 +134,18 @@
     color: #1d4ed8;
     text-decoration: underline;
 }
+
+.toggleDetailsBtn {
+    background: none;
+    border: none;
+    color: #3b82f6;
+    cursor: pointer;
+    padding: 0;
+    margin-top: 10px;
+    font-size: 0.9rem;
+    text-decoration: underline;
+}
+
+.toggleDetailsBtn:hover {
+    color: #1d4ed8;
+}
