--- a/src/sections/experience/Experience.module.css
+++ b/src/sections/experience/Experience.module.css
@@ -61,3 +61,9 @@
     border-radius: 6px;
     font-size: 0.85rem;
 }
+
+.cardLink {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
